--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
 
                     <div class="ReactTitle ps-3 d-flex align-items-center">
 
-                        <h3 class="mb-0">Data Structure - Array in JS</h3>
+                        <h3 class="mb-0">Arrays</h3>
                     </div>
                     <div class="d-flex ps-3 align-items-center">
                         <div class="flex-grow-1">
-                            <h4>Array</h4>
                             <p class="pb-0 mb-0 text-start">Purpose: Implement Array DS</p>
                         </div>
                     </div>
